# meshes4mic

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  remarks.md  setup.py
cpp/: labels2meshes.cpp  notes.tmp
cpp/tests/: main.cpp
docs/: conf.py  convertion.rst  index.rst  modules.rst  user_guide.rst
docs/_static/: uml.mdj
include/meshes4mic/: heller_mc.hpp  labels2meshes.hpp
src/: m4mcore.pyi
src/meshes4mic/bindings/: main.cpp
src/meshes4mic/convert/: __init__.py  image_properties.py  labels2meshes.py  ltm.py  ltm_worker.py  mtiff2meshes.py  tiff2meshes.py  tiff_attributes.py  tiff_properties.py  utils.py  zarr2meshes.py
src/meshes4mic/dump/: test_chunk.py  tests_dask.py
src/meshes4mic/experimental/: exp_aicsimageio.py  padding.py
src/meshes4mic/helpers/: gen_heller_mc_table.py
stubs/m4mcore/: __init__.pyi  distances.pyi  flux.pyi  surfaces.pyi
